Remove inlineBoundingBoxOffset from PaintLayer::updateLayerPosition

This extra variable was only used to obfuscate this code. Unfortunately
discovered this while working on 614257.

BUG=614257

Review-Url: https://codereview.chromium.org/2013953002
Cr-Commit-Position: refs/heads/master@{#396024}